Fix snackbar behavior

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,11 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler"
-            tools:itemCount="5"
-            tools:listitem="@layout/item_article"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_behavior="com.lithiumsheep.stratechery.SnackbarCoordinatorBehavior" />
+            app:layout_behavior="com.lithiumsheep.stratechery.ui.SnackbarCoordinatorBehavior"
+            tools:itemCount="5"
+            tools:listitem="@layout/item_article" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
