--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -59,10 +59,10 @@
 
         <ImageView
             android:id="@+id/image"
-            tools:src="@tools:sample/backgrounds/scenic"
-            android:adjustViewBounds="true"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            tools:src="@tools:sample/backgrounds/scenic" />
 
 
     </LinearLayout>
