--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -40,12 +40,13 @@
 
         </android.support.constraint.ConstraintLayout>
 
-
         <TextView
             android:id="@+id/title"
             style="@style/TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
             tools:text="@tools:sample/lorem" />
 
         <TextView
@@ -62,8 +63,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
+            android:paddingTop="8dp"
+            android:scaleType="centerInside"
             tools:src="@tools:sample/backgrounds/scenic" />
-
 
     </LinearLayout>
 
